<resources>
    <string name="app_name">GetFit</string>
    <string name="button">Button</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_weight_in_lbs">Enter your weight in lbs</string>
    <string name="textview">TextView</string>
    <string name="find_calorie_intake">Find Calorie Intake</string>
    <string name="user_information">User Information</string>
    <string name="welcome_to_getfit">Welcome to GetFIT</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calories">Calories</string>
    <string name="carboyhydrate">Carboyhydrate</string>
    <string name="fat">Fat</string>
    <string name="food_name">Food Name</string>
    <string name="protein">Protein</string>
    <string name="save">Save</string>
    <string name="view_online">View Online</string>
    <string name="logout">Logout</string>
</resources>
